--- a/style.css
+++ b/style.css
@@ -1,11 +1,7 @@
 /* HEADER - MY-TOP //////////////////*/
 .my_nav-top{
     height: 70px;
-}
-
-.navbar-brand{
-    display: block;
-    width: 40px;
+    background-color: #f8f9fa;
 }
 
 /* MAIN //////////////////*/
@@ -30,4 +26,56 @@ main{
 .my_main-content::-webkit-scrollbar {
     display: none;
 }
-  
+
+nav div:not(div.my_container){
+    border: 1px dashed magenta;
+}
+
+.my_container{
+    background-color: white;
+    padding: 0 15px;
+    width: 100%;
+}
+
+.my_logo-cont{
+    width: 50px;
+}
+
+.my_logo{
+    width: 100%;
+}
+
+.my_search{
+    width: calc(100% - 78px);
+}
+
+.my_pippo{
+    width: 90%;
+    height: 80%;
+    border-radius: 5px;
+    position: relative;
+}
+
+.my_searchbar{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    border: none;
+    background-color: #e5e5e5;
+    padding-left: 35px;
+}
+
+.my_searchbar:focus{
+    outline: none;
+}
+
+.my_lens{
+    position: absolute;
+    left: 8px;
+    top: 50%;
+    transform: translate(0 , -50%);
+}
+
+.my_notif{
+    width: 28px;
+}
