--- a/style.css
+++ b/style.css
@@ -1,30 +1,7 @@
-/* HEADER - MY-TOP //////////////////*/
+/* NAV - MY-NAV-TOP //////////////////*/
 .my_nav-top{
     height: 70px;
     background-color: #f8f9fa;
-}
-
-/* MAIN //////////////////*/
-main{
-    height: calc(100vh - 70px);
-}
-
-
-/* MAIN - MY-OVERFLOW-BOX //////////////////*/
-.my_aside{
-    background-color: aqua;
-    width: 65px;
-}
-
-/* MAIN - MY-MAIN-CONTENT //////////////////*/
-.my_main-content{
-    background-color: chocolate;
-    width: calc(100% - 65px);
-    overflow-y: auto;
-}
-
-.my_main-content::-webkit-scrollbar {
-    display: none;
 }
 
 .my_nav-container{
@@ -45,7 +22,7 @@ main{
     width: calc(100% - 78px);
 }
 
-.my_pippo{
+.my_searchbar-box{
     width: 90%;
     height: 80%;
     border-radius: 5px;
@@ -117,4 +94,27 @@ main{
     .my_more a{
         margin: auto;
     }
+}
+
+/* MAIN //////////////////*/
+main{
+    height: calc(100vh - 70px);
+}
+
+
+/* MAIN - MY-OVERFLOW-BOX //////////////////*/
+.my_aside{
+    background-color: aqua;
+    width: 65px;
+}
+
+/* MAIN - MY-MAIN-CONTENT //////////////////*/
+.my_main-content{
+    background-color: chocolate;
+    width: calc(100% - 65px);
+    overflow-y: auto;
+}
+
+.my_main-content::-webkit-scrollbar {
+    display: none;
 }
