--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+a{
+    text-decoration: none;
+}
+
 /* NAV - MY-NAV-TOP //////////////////*/
 .my_nav-top{
     height: 70px;
@@ -137,9 +141,23 @@ main{
     padding: 0.85rem 0;
 }
 
+.my_sidebar p{
+    color: white;
+    font-size: 1rem;
+    font-weight: 600;
+    padding-left: 0.4rem;
+    display: none;
+}
 
+@media screen and (min-width: 768px) {
+    .my_sidebar{
+        width: 170px;
+    }
 
-/* MAIN - MY-OVERFLOW-BOX //////////////////*/
+    .my_sidebar p{
+        display: inline-block;
+    }
+}
 
 /* MAIN - MY-MAIN-CONTENT //////////////////*/
 .my_main-content{
@@ -150,4 +168,10 @@ main{
 
 .my_main-content::-webkit-scrollbar {
     display: none;
+}
+
+@media screen and (min-width: 768px) {
+    .my_main-content{
+        width: calc(100% - 170px);
+    }    
 }
